fixed minor bug in light/dark mode. Logic was backwards on initial render

--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,13 @@
   --input-text: #284B63;
 }
 
-[data-them="light"] {
+[data-theme="light"] {
   --primary-color: #D9D9D9;
-  --secondary-color: #9df8d1;
-  --contrast-color: #4b8fbc;
+  --secondary-color: #b1c5c6;
+  --contrast-color: #284B63;
   --bg-color:  #FFFFFF;
   --input-color: #e1dddd;
-  --input-text: #4b8fbc;
+  --input-text: #284B63;
 }
 
 html {
@@ -273,4 +273,61 @@ span#percent {
     top: 0%;
     left: 50%;
     transform: translate(-50%, 0);
+}
+
+/* toggle switch */
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 84%;
+  top: 1%;
+}
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display:none;
+}
+
+.slider {
+  background-color: #284B63;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background-color: #d9d9d9;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
